# snekoil

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  commits.yml  test.yml
benchmarks/range/: benchmark.sh  conventional.py  with_snakeoil.py  with_snekoil.py
snakeoil/: __init__.py  iterators.py  time.py
snekoil/: __init__.py  iterators.py  monkeypatch.py  snekpatch.py  speedup.py  time.py  unmonkeypatch.py  unsnekpatch.py
tests/: test_filter.py  test_list.py  test_monkeypatch.py  test_range.py  test_sleep.py  test_snekpatch.py
